remove bottom margin on navbar class (prevent unnecessary scrollbar)

--- a/css/hec-public-portal.css
+++ b/css/hec-public-portal.css
@@ -462,7 +462,6 @@ float: left;
 
 .navbar {
 overflow: visible;
-margin-bottom: 18px;
 }
 /***** list (ul tag with "nav" class) under a navbar ***/
 .navbar .nav {
